--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,7 +3,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-            tools:context=".LoginFragment"
+            tools:context="login_register.LoginFragment"
             android:background="@drawable/img_background">
 
         <LinearLayout android:layout_width="match_parent"
@@ -15,15 +15,16 @@
                 <ImageView android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
-                           android:layout_marginTop="90dp"
+                           android:layout_marginTop="100dp"
                            android:src="@drawable/img_logo"/>
 
-                <TextView android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:text="@string/app_name"
-                          android:textColor="#000"
-                          android:textSize="15sp"
-                          android:layout_marginTop="11dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/app_name"
+                    android:textColor="#000"
+                    android:textSize="30sp" />
                 
                 <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                        android:layout_height="wrap_content"
@@ -33,9 +34,12 @@
                                                                        android:layout_marginStart="40dp"
                                                                        android:layout_marginEnd="40dp">
 
-                        <com.google.android.material.textfield.TextInputEditText android:id="@+id/username_login"
-                                                                                 android:layout_width="match_parent"
-                                                                                 android:layout_height="wrap_content" />
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/username_login"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:alpha="0.7"
+                            android:backgroundTint="#4CAF50" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
@@ -46,36 +50,37 @@
                                                                        android:layout_marginStart="40dp"
                                                                        android:layout_marginEnd="40dp">
 
-                        <com.google.android.material.textfield.TextInputEditText android:id="@+id/password_login"
-                                                                                 android:layout_width="match_parent"
-                                                                                 android:layout_height="wrap_content"
-                                                                                 android:inputType="textPassword" />
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/password_login"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:alpha="0.7"
+                            android:backgroundTint="#4CAF50"
+                            android:inputType="textPassword" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <RelativeLayout android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="36dp">
-                        <com.google.android.material.button.MaterialButton android:id="@+id/button_login"
-                                                                           android:layout_width="wrap_content"
-                                                                           android:layout_height="wrap_content"
-                                                                           android:text="@string/login_button"
-                                                                           android:layout_alignParentEnd="true"
-                                                                           android:layout_marginEnd="40dp" />
 
-                        <com.google.android.material.button.MaterialButton android:id="@+id/button_register"
-                                                                           style="@style/Widget.MaterialComponents.Button.TextButton"
-                                                                           android:layout_width="wrap_content"
-                                                                           android:layout_height="wrap_content"
-                                                                           android:text="@string/register_button"
-                                                                           android:layout_toLeftOf="@id/button_login"
-                                                                           android:layout_marginEnd="40dp" />
-                        <!--<com.google.android.gms.common.SignInButton
-                            android:id="@+id/google_login"
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/button_login"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />-->
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginEnd="40dp"
+                            android:backgroundTint="#4CAF50"
+                            android:text="@string/login_button" />
 
-
-
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/button_register"
+                            style="@style/Widget.MaterialComponents.Button.TextButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="40dp"
+                            android:layout_toLeftOf="@id/button_login"
+                            android:text="@string/register_button"
+                            android:textColor="#4CAF50" />
                 </RelativeLayout>
 
 
