--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -3,7 +3,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-            tools:context=".LoginFragment"
+            tools:context="login_register.LoginFragment"
             android:background="@drawable/img_background">
 
     <LinearLayout android:layout_width="match_parent"
@@ -15,27 +15,30 @@
         <ImageView android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
-                   android:layout_marginTop="90dp"
+                   android:layout_marginTop="100dp"
                    android:src="@drawable/img_logo"/>
 
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:text="shopEasy"
+                  android:text="@string/app_name"
                   android:textColor="#000"
-                  android:textSize="15sp"
-                  android:layout_marginTop="11dp"/>
+                  android:textSize="30sp"
+                  android:layout_marginTop="15dp"/>
 
         <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                android:layout_height="wrap_content"
                                                                android:hint="@string/login_hint"
                                                                app:boxBackgroundColor="#F8E9FD"
-                                                               android:layout_marginTop="50dp"
+                                                               android:layout_marginTop="25dp"
                                                                android:layout_marginStart="40dp"
                                                                android:layout_marginEnd="40dp">
 
-            <com.google.android.material.textfield.TextInputEditText android:id="@+id/username_register"
-                                                                     android:layout_width="match_parent"
-                                                                     android:layout_height="wrap_content" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/username_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:alpha="0.7"
+                android:backgroundTint="#4CAF50" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
@@ -46,10 +49,13 @@
                                                                android:layout_marginStart="40dp"
                                                                android:layout_marginEnd="40dp">
 
-            <com.google.android.material.textfield.TextInputEditText android:id="@+id/password_register"
-                                                                     android:layout_width="match_parent"
-                                                                     android:layout_height="wrap_content"
-                                                                     android:inputType="textPassword" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:alpha="0.7"
+                android:backgroundTint="#4CAF50"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
@@ -60,29 +66,38 @@
                                                                android:layout_marginStart="40dp"
                                                                android:layout_marginEnd="40dp">
 
-            <com.google.android.material.textfield.TextInputEditText android:id="@+id/password_check_register"
-                                                                     android:layout_width="match_parent"
-                                                                     android:layout_height="wrap_content"
-                                                                     android:inputType="textPassword" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password_check_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:alpha="0.7"
+                android:backgroundTint="#4CAF50"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <RelativeLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="36dp">
-            <com.google.android.material.button.MaterialButton android:id="@+id/button_login_reg"
-                                                               style="@style/Widget.MaterialComponents.Button.TextButton"
-                                                               android:layout_width="wrap_content"
-                                                               android:layout_height="wrap_content"
-                                                               android:text="@string/login_button"
-                                                               android:layout_alignParentEnd="true"
-                                                               android:layout_marginEnd="40dp" />
 
-            <com.google.android.material.button.MaterialButton android:id="@+id/button_register_reg"
-                                                               android:layout_width="wrap_content"
-                                                               android:layout_height="wrap_content"
-                                                               android:text="@string/register_button"
-                                                               android:layout_toStartOf="@id/button_login_reg"
-                                                               android:layout_marginEnd="40dp" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_login_reg"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="40dp"
+                android:backgroundTint="#66000000"
+                android:text="@string/login_button"
+                android:textColor="#4CAF50" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_register_reg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="40dp"
+                android:layout_toStartOf="@id/button_login_reg"
+                android:text="@string/register_button"
+                app:backgroundTint="#4CAF50" />
         </RelativeLayout>
     </LinearLayout>
 </ScrollView>
