Drobne modyfikacje w wyglądzie aplikacji

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/img_background"
     tools:context=".HomeFragment">
 
 
@@ -56,7 +57,7 @@
                 android:hint="Szukaj"
                 android:inputType="text"
                 android:padding="13dp"
-                android:textColorHint="#FFFFFF"
+                android:textColorHint="#0D47A1"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -149,18 +150,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/bottom">
 
-        <ImageView
-            android:layout_width="30dp"
+        <ImageButton
+            android:id="@+id/glownaButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@android:drawable/ic_menu_view" />
+            android:adjustViewBounds="false"
+            android:backgroundTint="#004CAF50"
+            android:contentDescription="@string/glownaButtonText"
+            android:src="@android:drawable/sym_action_chat"
+            app:tint="@color/black" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:text="Główna"
-            android:textColor="#fff" />
     </LinearLayout>
 
     <LinearLayout
@@ -174,19 +173,16 @@
         app:layout_constraintStart_toEndOf="@+id/glowna"
         app:layout_constraintTop_toTopOf="@+id/bottom">
 
-        <ImageView
-            android:layout_width="30dp"
+        <ImageButton
+            android:id="@+id/menuButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:alpha="0.4"
-            android:src="@android:drawable/ic_dialog_dialer" />
+            android:adjustViewBounds="false"
+            android:backgroundTint="#004CAF50"
+            android:contentDescription="@string/menuButtonText"
+            android:src="@android:drawable/ic_dialog_dialer"
+            app:tint="@color/black" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:text="Menu"
-            android:textColor="#fff" />
     </LinearLayout>
 
     <LinearLayout
@@ -200,19 +196,16 @@
         app:layout_constraintStart_toEndOf="@+id/menu"
         app:layout_constraintTop_toTopOf="@+id/bottom">
 
-        <ImageView
-            android:layout_width="30dp"
+        <ImageButton
+            android:id="@+id/kontoButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:alpha="0.4"
-            android:src="@android:drawable/ic_dialog_info" />
+            android:adjustViewBounds="false"
+            android:backgroundTint="#004CAF50"
+            android:contentDescription="@string/kontoButtonText"
+            android:src="@android:drawable/sym_action_email"
+            app:tint="@color/black" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:text="Konto"
-            android:textColor="#fff" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
