--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img_background"
     tools:context=".HomeFragment">
 
 
@@ -13,9 +11,9 @@
         android:id="@+id/imageView2"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
         android:layout_marginStart="30dp"
         android:layout_marginTop="25dp"
+        android:adjustViewBounds="true"
         android:src="@drawable/img_logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,46 +29,46 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
+    <EditText
+        android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
+        android:layout_margin="30dp"
+        android:alpha="0.9"
+        android:background="@drawable/rounded_edittext_states"
+        android:drawableLeft="@android:drawable/ic_menu_search"
+        android:drawablePadding="17dp"
+        android:ems="100"
+        android:hint="Szukaj"
+        android:inputType="text"
+        android:padding="13dp"
+        android:textColorHint="#82858A"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/tytul"
+        tools:layout_editor_absoluteX="30dp" />
+
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:fillViewport="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4">
+        app:layout_constraintTop_toBottomOf="@+id/search"
+        tools:layout_editor_absoluteX="-16dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="30dp"
-                android:alpha="0.9"
-                android:background="#4CAF50"
-                android:drawableLeft="@android:drawable/ic_menu_search"
-                android:drawablePadding="17dp"
-                android:ems="10"
-                android:hint="Szukaj"
-                android:inputType="text"
-                android:padding="13dp"
-                android:textColorHint="#0D47A1"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
+                android:layout_width="172dp"
+                android:layout_height="101dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="29dp"
                 android:background="@drawable/button_states"
                 android:text="All"
                 android:textAllCaps="false"
@@ -78,12 +76,12 @@
                 android:textSize="17sp"
                 app:layout_constraintEnd_toStartOf="@+id/button2"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/search" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
+                android:layout_width="172dp"
+                android:layout_height="101dp"
                 android:background="@drawable/button_states"
                 android:outlineAmbientShadowColor="#4CAF50"
                 android:text="New"
@@ -96,8 +94,8 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button3"
-                android:layout_width="110dp"
-                android:layout_height="48dp"
+                android:layout_width="172dp"
+                android:layout_height="101dp"
                 android:background="@drawable/button_states"
                 android:text="Category"
                 android:textAllCaps="false"
@@ -107,27 +105,9 @@
                 app:layout_constraintStart_toEndOf="@+id/button2"
                 app:layout_constraintTop_toTopOf="@+id/button" />
 
-            <androidx.core.widget.NestedScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:paddingStart="8dp"
-                android:paddingTop="8dp"
-                android:paddingEnd="8dp"
-                android:paddingBottom="160dp"
-                app:layout_constraintTop_toBottomOf="@id/button3">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-
-            </androidx.core.widget.NestedScrollView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-
+    </HorizontalScrollView>
 
     <View
         android:id="@+id/bottom"
@@ -207,5 +187,13 @@
             app:tint="@color/black" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tytul"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Restauracja"
+        tools:layout_editor_absoluteX="168dp"
+        tools:layout_editor_absoluteY="38dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
