--- a/app/src/main/res/drawable/bottom_background.xml
+++ b/app/src/main/res/drawable/bottom_background.xml
@@ -3,6 +3,8 @@
 
     <item>
         <shape android:shape="rectangle">
+            <corners android:topLeftRadius="15dp"
+                android:topRightRadius="15dp" />
             <gradient
                 android:endColor="#68F4F4F4"
                 android:centerColor="#C2EDEDED"
@@ -14,7 +16,7 @@
 
     <item android:top="7dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/cardview_dark_background" />
+            <solid android:color="@color/cardview_shadow_start_color" />
         </shape>
     </item>
 
