--- a/app/src/main/res/drawable/button_states.xml
+++ b/app/src/main/res/drawable/button_states.xml
@@ -3,10 +3,12 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <corners android:radius="1000dp" />
-            <solid android:color="#414240" />
-            <stroke
-                android:width="2dip"
-                android:color="#414240" />
+            <solid android:color="#4CAF50" />
+            <gradient
+                android:endColor="#4CAF50"
+                android:centerColor="#68EC6E"
+                android:startColor="#96E899"
+                android:angle="180"/>
             <padding
                 android:bottom="4dp"
                 android:left="4dp"
