--- a/app/src/main/res/drawable/button_states.xml
+++ b/app/src/main/res/drawable/button_states.xml
@@ -30,4 +30,18 @@
                 android:top="4dp" />
         </shape>
     </item>
+    <item android:state_active="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="1000dp" />
+            <solid android:color="#4CAF50" />
+            <stroke
+                android:width="2dip"
+                android:color="#4CAF50" />
+            <padding
+                android:bottom="4dp"
+                android:left="4dp"
+                android:right="4dp"
+                android:top="4dp" />
+        </shape>
+    </item>
 </selector>
