--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -494,7 +494,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="false"
-            android:backgroundTint="#004CAF50"
+            android:backgroundTint="@android:color/transparent"
             android:contentDescription="@string/glownaButtonText"
             android:src="@android:drawable/sym_action_chat"
             app:tint="@color/black" />
@@ -517,7 +517,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="false"
-            android:backgroundTint="#004CAF50"
+            android:backgroundTint="@android:color/transparent"
             android:contentDescription="@string/menuButtonText"
             android:src="@android:drawable/ic_dialog_dialer"
             app:tint="@color/black" />
@@ -540,7 +540,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="false"
-            android:backgroundTint="#004CAF50"
+            android:backgroundTint="@android:color/transparent"
             android:contentDescription="@string/kontoButtonText"
             android:src="@android:drawable/sym_action_email"
             app:tint="@color/black" />
