--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,125 +5,141 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="login_register.LoginFragment">
-        <!--android:background="@drawable/img_background"-->
+    tools:context="login_register.SignInFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/fragment_button_register"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:focusableInTouchMode="true">
+            android:layout_marginStart="200dp"
+            android:layout_marginTop="32dp"
+            android:backgroundTint="@android:color/transparent"
+            android:outlineProvider="none"
+            android:text="Stwórz konto"
+            android:textColor="#4CAF50"
+            app:layout_constraintEnd_toStartOf="@+id/fragment_button_sign_in"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="250dp"
-                    android:layout_height="250dp"
-                    android:layout_marginTop="40dp"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/img_logo"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/fragment_button_sign_in"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="200dp"
+            android:backgroundTint="@android:color/transparent"
+            android:outlineProvider="none"
+            android:text="Zaloguj się"
+            android:textColor="#4CAF50"
+            app:layout_constraintBaseline_toBaselineOf="@+id/fragment_button_register"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/fragment_button_register" />
 
-                <TextView
-                    android:id="@+id/textView15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="32dp"
-                    android:text="Witaj"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                    android:textColor="#000"
-                    android:textSize="30sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        <View
+            android:id="@+id/divider"
+            android:layout_width="100dp"
+            android:layout_height="5dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="1dp"
+            android:background="#6C6C6C"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:breakStrategy="balanced"
-                    android:paddingLeft="8dp"
-                    android:text="Posiadanie konta w naszej aplikacji pozwala na wykorzystanie wszystkich jej funkcji"
-                    android:textAlignment="center"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_button_register">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/button_login"
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_marginStart="64dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="64dp"
-                    android:backgroundTint="#4CAF50"
-                    android:text="Stwórz konto"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    app:cornerRadius="15dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:paddingStart="10dp"
+                android:text="Email"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textStyle="bold" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/button_register"
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_marginStart="64dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="64dp"
-                    android:backgroundTint="#99E693"
-                    android:text="Zaloguj się"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="#4CAF50"
-                    app:cornerRadius="15dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/button_login" />
+            <EditText
+                android:id="@+id/editTextTextEmailAddress2"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="30dp"
+                android:background="@drawable/rounded_edittext_states"
+                android:ems="10"
+                android:hint="Wprowadź adres email"
+                android:inputType="textEmailAddress"
+                android:singleLine="true" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/button_login_no_acc"
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_marginStart="64dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="64dp"
-                    android:backgroundTint="#99E693"
-                    android:text="Kontynuuj bez logowania"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="#4CAF50"
-                    app:cornerRadius="15dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/button_register" />
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:paddingStart="10dp"
+                android:text="Hasło"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/textView16"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="Logując się akceptujesz "
-                    app:layout_constraintBaseline_toBaselineOf="@+id/button7"
-                    app:layout_constraintStart_toStartOf="parent" />
+            <EditText
+                android:id="@+id/editTextTextPassword"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="30dp"
+                android:background="@drawable/rounded_edittext_states"
+                android:ems="10"
+                android:hint="Wprowadź hasło"
+                android:inputType="textPassword"
+                android:singleLine="true" />
 
-                <Button
-                    android:id="@+id/button7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="8dp"
-                    android:backgroundTint="@android:color/transparent"
-                    android:outlineAmbientShadowColor="#FFFFFF"
-                    android:outlineProvider="none"
-                    android:text="Regulamin i Politykę Prywatności"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:textColor="#4CAF50"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/textView16"
-                    app:layout_constraintTop_toBottomOf="@+id/button_login_no_acc" />
+        </LinearLayout>
 
+        <Button
+            android:id="@+id/login_fragment_login_button"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="64dp"
+            android:backgroundTint="#4CAF50"
+            android:text="Zaloguj się"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/login_fragment_google_login"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="64dp"
+            android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
+            android:drawableStart="@drawable/common_google_signin_btn_icon_dark_normal"
+            android:foreground="@drawable/common_google_signin_btn_icon_dark"
+            android:foregroundGravity="left"
+            android:gravity="end"
+            android:text="Zaloguj się za pomocą konta Google"
+            android:textColor="#000000"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/login_fragment_login_button" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
